[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parsedatetime-stubs"
description = "Type stubs for parsedatetime."
requires-python = ">=3.8"
version = "2.6"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "python-3", "parsedatetime", "type-stubs"]
authors = [
    { name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/Sachaa-Thanasius/parsedatetime-stubs"
Issues = "https://github.com/Sachaa-Thanasius/parsedatetime-stubs/issues"

[tool.ruff]
include = ["parsedatetime/*"]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PD",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity.
    "PLR2004", # Magic value comparison.
    "SIM105",  # Suppressable exception. contextlib.suppress is a stylistic choice with overhead.
    "C90",     # McCabe complexity memes.
    "PLR0913", # Some functions require more than 5 arguments.
    "ANN101",  # Type of Self for self is implicit.
    "ANN401",  # Use of Any in function signatures is a known quantity.
    # Recommended by Ruff when using Ruff format.
    "E111",
    "E114",
    "E117",
    "Q003",
    "COM812",
    "COM819",
    # "E501",
    "ISC001",
    "ISC002",
]
unfixable = [
    "ERA", # I don't want anything erroneously detected deleted by this.
]

[tool.ruff.lint.per-file-ignores]
# These causes issues when declaring module imports in __init__ files.
"parsedatetime/__init__.pyi" = ["F403", "PLC0414"]
# This file re-exports imports for backwards compatibility reasons.
"parsedatetime/parsedatetime.pyi" = ["F403"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
include = ["parsedatetime"]

pythonVersion = "3.8"
typeCheckingMode = "strict"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
